# PBT205

./: .gitignore
PBT205_Assessment1/chatting_application/: rabbitmq_utils.py
PBT205_Assessment1/chatting_application/templates/: change_room.html
PBT205_Assessment1/trading_system/: exchange.py
PBT205_Assessment_1/chatting_application/: README.md  app.py
PBT205_Assessment_1/chatting_application/templates/: chat.html  join.html
PBT205_Assessment_1/trading_system/: README.md  sendOrder.py  trade_gui.py  trade_listener.py
chatting_application/: Cargo.toml  compose.yaml  package-lock.json
chatting_application/backend/: Cargo.toml
chatting_application/backend/src/: app.rs  context.rs  main.rs  message.rs
chatting_application/backend/src/api/: mod.rs
chatting_application/backend/src/api/auth/: mod.rs
chatting_application/backend/src/api/auth/google/: mod.rs
chatting_application/backend/src/api/channels/: mod.rs
chatting_application/backend/src/api/messages/: mod.rs
chatting_application/backend/src/authentication_extractor/: mod.rs
chatting_application/backend/src/context/: broker.rs  database.rs  google_oauth.rs  mod.rs
chatting_application/backend/src/types/: account.rs  channel.rs  message.rs  mod.rs
chatting_application/frontend/: index.html  package-lock.json  package.json  vite.config.ts
chatting_application/frontend/src/: App.module.css  App.tsx  index.css  main.tsx
chatting_application/frontend/src/app/: App.module.css  App.tsx
chatting_application/frontend/src/app/authorisation_popup/: AuthorisationPopup.module.css  AuthorisationPopup.tsx
chatting_application/frontend/src/app/channel/: Channel.module.css  Channel.tsx
chatting_application/frontend/src/app/message/: Message.module.css
chatting_application/frontend/src/app/navigation/: Navigation.module.css  Navigation.tsx
chatting_application/frontend/src/app/navigation/channel_button/: ChannelButton.module.css  ChannelButton.tsx
chatting_application/frontend/src/app/navigation/channel_button_skeleton/: ChannelButtonSkeleton.module.css  ChannelButtonSkeleton.tsx
chatting_application/frontend/src/app/navigation/channel_creation_popup/: ChannelCreationPopup.module.css  ChannelCreationPopup.tsx
chatting_application/frontend/src/app/placeholder/: Placeholder.module.css  Placeholder.tsx
chatting_application/frontend/src/channel/: Channel.module.css  Channel.tsx
chatting_application/frontend/src/message/: Message.tsx
chatting_application/frontend/src/navigation/: Navigation.module.css  Navigation.tsx
chatting_application/frontend/src/navigation/channel_button/: ChannelButton.module.css  ChannelButton.tsx
chatting_application/frontend/src/placeholder/: Placeholder.module.css
chatting_application/migrations/: 000_init.sql
chatting_application/scripts/: build.sh  build_backend.sh  dependencies_0.sh  dependencies_1.sh  dependencies_windows_specific.txt  generate_cert.sh  install_sqlx_cli.sh  reset_database.sh  run_backend.sh  run_database.sh
contact_tracing/: .env  Cargo.toml  README.md  compose.yaml
contact_tracing/backend/: Cargo.toml
contact_tracing/backend/src/: app.rs  main.rs
contact_tracing/backend/src/api/: accounts.rs  auth.rs  mod.rs  position.rs  world.rs
contact_tracing/backend/src/authentication_extractor/: mod.rs
contact_tracing/backend/src/common/: account.rs  mod.rs  query.rs
contact_tracing/backend/src/context/: broker.rs  database.rs  mod.rs
contact_tracing/backend/src/types/: account.rs
contact_tracing/common/: Cargo.toml
contact_tracing/common/src/: account.rs  broker.rs  database.rs  lib.rs  query.rs
contact_tracing/docker/: backend.dockerfile  tracker.dockerfile
contact_tracing/documentation/: architecture_presentation.odp
contact_tracing/frontend/: package-lock.json  package.json  vite.config.ts
contact_tracing/frontend/src/: index.css  main.tsx
contact_tracing/frontend/src/app/: App.module.css  App.tsx
contact_tracing/frontend/src/app/authorisation/: Authorisation.module.css  Authorisation.tsx
contact_tracing/frontend/src/app/authorisation_popup/: AuthorisationPopup.module.css  AuthorisationPopup.tsx
contact_tracing/frontend/src/app/sidebar/: Sidebar.module.css  Sidebar.tsx
contact_tracing/frontend/src/app/sidebar/contacts/: Contacts.module.css  Contacts.tsx
contact_tracing/frontend/src/app/sidebar/contacts/contact/: Contact.module.css  Contact.tsx
contact_tracing/frontend/src/app/world/: World.module.css  World.tsx
contact_tracing/frontend/src/engine/: Engine.ts
contact_tracing/migrations/: 000_init.down.sql  000_init.sql  000_init.up.sql
contact_tracing/scripts/: build.sh  generate_cert.sh  run_database.sh  run_frontend.sh
contact_tracing/scripts/tests/: test.sh
contact_tracing/tracker/: Cargo.toml
contact_tracing/tracker/src/: database.rs  main.rs
trading_system/: Cargo.toml  compose.yaml
trading_system/backend/: Cargo.toml
trading_system/backend/src/: app.rs  main.rs
trading_system/backend/src/api/: auth.rs  mod.rs
trading_system/backend/src/context/: database.rs  mod.rs
trading_system/common/: Cargo.toml
trading_system/common/src/: account.rs  broker.rs  database.rs  lib.rs  order_action.rs
trading_system/docker/: exchange.dockerfile
trading_system/frontend/: package-lock.json  package.json
trading_system/frontend/src/: index.css  main.tsx
trading_system/frontend/src/app/: App.module.css  App.tsx
trading_system/frontend/src/app/content/: Content.module.css  Content.tsx
trading_system/frontend/src/app/content/dashboard/: Dashboard.tsx
trading_system/frontend/src/app/content/list/: List.tsx
trading_system/frontend/src/app/content/orders/: Orders.tsx
trading_system/frontend/src/app/content/portfolio/: Portfolio.tsx
trading_system/frontend/src/app/content/trade/: Trade.module.css  Trade.tsx
trading_system/frontend/src/app/navigation/: Navigation.module.css  Navigation.tsx
trading_system/migrations/: 000_init.sql
trading_system/scripts/: build.sh  reset_database.sh  run_database.sh
