[workspace]
members = [
    "backend",
    "tracker",
    "common",
]

[workspace.dependencies]
# web application
    axum = {version = "0.8.8", features = [] }
    axum-extra = { version = "0.12.5", features = ["cookie", "typed-header"] }
    axum-server = {version = "0.8.0", features = ["tls-rustls"]}
    tower-http = {version = "0.6.8", features = ["trace", "fs"]}
# web application end

# serialisation
    serde = { version = "1.0.228", features = ["derive"] }
    postcard = "1.1.3"
    serde_json = "1.0.149"
# serialisation end

# middleware
    # rabbitmq client
    lapin = "4.0.0"

    # postgres client
    sqlx = {version = "0.8.6", features = ["postgres", "runtime-tokio", "uuid"]}
# middleware end

# async
    futures-util = "0.3.31"
    tokio = {version = "1.49.0", features = ["full"]}
# async end

# tracing (logging)
    tracing = "0.1.44"
    tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
# tracing end

# common
    uuid = { version = "1.21.0", features = ["v4"] }
    rand = "0.10.0"
# common end

# local libs
    common.path = "common"
# local libs end