[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }

futures-util = "0.3.31"
axum = {version = "0.8.8", features = [] }
axum-server = {version = "0.8.0", features = ["tls-rustls"]}
tower-http = {version = "0.6.8", features = ["trace", "fs"]}

tokio = {version = "1.49.0", features = ["full"]}
tokio-rustls = "0.26.4"
tokio-stream = {version = "0.1.18", features = ["sync"]}

rand = "0.10.0"
percent-encoding = "2.3.2"


serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

reqwest = { version = "0.13.2", features = ["form", "json"] }