[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }

futures-util = "0.3.31"
axum = {version = "0.8.8", features = [] }
axum-extra = { version = "0.12.5", features = ["cookie", "typed-header"] }
axum-server = {version = "0.8.0", features = ["tls-rustls"]}
tower-http = {version = "0.6.8", features = ["trace", "fs"]}

tokio = {version = "1.49.0", features = ["full"]}
tokio-stream = {version = "0.1.18", features = ["sync"]}

rand = "0.10.0"
percent-encoding = "2.3.2"


serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

reqwest = { version = "0.13.2", features = ["form", "json"] }
url = "2.5.8"

jsonwebtoken = {version = "10.3.0", features = ["aws_lc_rs"]}
sqlx = {version = "0.8.6", features = ["postgres", "runtime-tokio"]}

dashmap = "6.1.0"
uuid = {version = "1.20.0", features = ["serde", "v7"]}

lapin = "4.0.0"
postcard = "1.1.3"
chrono = {version = "0.4.43", features = ["serde"]}