[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = {version = "0.8.8", features = [] }
axum-extra = { version = "0.12.5", features = ["cookie", "typed-header"] }
axum-server = {version = "0.8.0", features = ["tls-rustls"]}
tower-http = {version = "0.6.8", features = ["trace", "fs"]}


rand = "0.10.0"
percent-encoding = "2.3.2"

chrono = {version = "0.4.43", features = ["serde"]}
uuid = { version = "1.21.0", features = ["v4"] }

tokio.workspace = true
futures-util.workspace = true

tracing.workspace = true
tracing-subscriber.workspace = true

sqlx.workspace = true
lapin.workspace = true

serde.workspace = true
postcard.workspace = true
serde_json.workspace = true