[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum.workspace = true
axum-extra.workspace = true
axum-server.workspace = true
tower-http.workspace = true

rand.workspace = true


uuid.workspace = true

tokio.workspace = true
futures-util.workspace = true

tracing.workspace = true
tracing-subscriber.workspace = true

sqlx.workspace = true
lapin.workspace = true

serde.workspace = true
postcard.workspace = true
serde_json.workspace = true

common.workspace = true