[package]
name = "tracker"
version = "0.1.0"
edition = "2024"

[dependencies]
sqlx.workspace = true
lapin.workspace = true

serde.workspace = true
postcard.workspace = true
serde_json.workspace = true

tokio.workspace = true
futures-util.workspace = true

tracing.workspace = true
tracing-subscriber.workspace = true


common.workspace = true